--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
     <meta name="description" content="" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <link rel="stylesheet" href="styles.css" />
+    <link rel="shortcut icon" href="./favicon.ico" type="image/x-icon">
     <script src="script.js" type="module"></script>
   </head>
   <body>
